compiler/tests/fail/arm-m4/intrinsic_ubfxS.jazz
export
fn ubfx(reg u32 arg0) -> reg u32 {
    reg u32 x;
    reg bool nf, zf, vf, cf;

    ?{}, x = #UBFXS(arg0, 0, 1);
    reg u32 res;
    res = x;
    return res;
}
